add find a rabbit

--- a/coordinates/index.html
+++ b/coordinates/index.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script>
-      const coor = document.querySelector('document')
-      document.addEventListener('mouseover', () => {
-      })
-      coor.innerHTML = `${e.pageX}, ${e.pageY}`
-    </script>
+    <div class="line horizontal"></div>
+    <div class="line vertical"></div>
+    <img src="./img/target.png" class="target" />
+    <span class="tag"></span>
+    <script></script>
   </body>
 </html>
